--- a/posts.html
+++ b/posts.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="/favicon.png" />
+    <link rel="icon" href="/favicon.svg" />
     <meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout-b19f90b6.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page-49288d19.css" rel="stylesheet">
@@ -57,6 +57,16 @@
       }
     </script>
   </head>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-4L7GTF77EH"></script>
+  <script>
+    window.dataLayer = window.dataLayer || []
+    function gtag() {
+      dataLayer.push(arguments)
+    }
+    gtag('js', new Date())
+
+    gtag('config', 'G-4L7GTF77EH')
+  </script>
 
   <body class="h-full bg-white dark:bg-zinc-900 text-zinc-600 dark:text-zinc-400">
     <div>
@@ -115,7 +125,7 @@
 				env: {},
 				paths: {"assets":"","base":""},
 				target: document.querySelector('[data-sveltekit-hydrate="11vtb0w"]').parentNode,
-				version: "1673999180026",
+				version: "1674002233959",
 				hydrate: {
 					node_ids: [0, 7],
 					data: [null,{type:"data",data:{posts:[{title:"Writing LaTeX Documents In Visual Studio Code With LaTeX Workshop",date:"2018-08-31",headings:[{depth:2,value:"Why LaTeX",id:"why-latex"},{depth:2,value:"Installing tools",id:"installing-tools"},{depth:2,value:"LaTeX + GIT",id:"latex--git"},{depth:2,value:"Integrating with Overleaf",id:"integrating-with-overleaf"},{depth:2,value:"Conclusion",id:"conclusion"}],slug:"latex-with-vscode",isIndexFile:true,preview:{html:"\u003Cp\u003E\u003Cem\u003EIf you want to write LaTeX on your machine, VS Code is a great option for you! Installing all the necessary packages is a simple process. And with the power of Git, you can sync with web-based editors like Overleaf, and have satisfying versioning and backup.\u003C\u002Fem\u003E\u003C\u002Fp\u003E",text:"If you want to write LaTeX on your machine, VS Code is a great option for you! Installing all the necessary packages is a simple process. And with the power of Git, you can sync with web-based editors like Overleaf, and have satisfying versioning and backup."},readingTime:"7 min read",next:void 0,previous:void 0}],page:1,limit:10},uses:{params:["page"]}}],
