--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="/favicon.png" />
+    <link rel="icon" href="/favicon.svg" />
     <meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout-b19f90b6.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page-bfc71f6a.css" rel="stylesheet">
@@ -58,6 +58,16 @@ Besides all that, I worked with a fair share of Cloud Infrastructure and Kuberne
       }
     </script>
   </head>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-4L7GTF77EH"></script>
+  <script>
+    window.dataLayer = window.dataLayer || []
+    function gtag() {
+      dataLayer.push(arguments)
+    }
+    gtag('js', new Date())
+
+    gtag('config', 'G-4L7GTF77EH')
+  </script>
 
   <body class="h-full bg-white dark:bg-zinc-900 text-zinc-600 dark:text-zinc-400">
     <div>
@@ -113,7 +123,7 @@ Besides all that, I worked with a fair share of Cloud Infrastructure and Kuberne
 				env: {},
 				paths: {"assets":"","base":""},
 				target: document.querySelector('[data-sveltekit-hydrate="1gwt4t8"]').parentNode,
-				version: "1673999180026",
+				version: "1674002233959",
 				hydrate: {
 					node_ids: [0, 3],
 					data: [null,null],
