--- a/admin.php.html
+++ b/admin.php.html
@@ -6,14 +6,14 @@
     <link rel="icon" href="/favicon.svg" />
     <meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout-b19f90b6.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-aa93bf10.js">
+		<link rel="modulepreload" href="./_app/immutable/start-67a81025.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-998a520c.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-e8597c0a.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper-41c905a7.js">
 		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-a9fb7042.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/_layout.js-9cbb603b.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout-da46b06b.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/admin.php/_page.svelte-753bd89a.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/admin.php/_page.svelte-6c17be99.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/info-523b83f0.js"><title>Rafael "Auyer" Passos</title><!-- HEAD_svelte-1cbbdsg_START --><meta name="description" content="I'm Rafael, a software engineer based in Brazil. I began my career as a 
 researcher, but migrated to the tech industry in 2019.
 I'm a curious individual. 
@@ -82,23 +82,26 @@ Besides all that, I worked with a fair share of Cloud Infrastructure and Kuberne
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="block text-zinc-400 dark:hidden"><path fill-rule="evenodd" d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zm-.464 4.95l.707.707a1 1 0 001.414-1.414l-.707-.707a1 1 0 00-1.414 1.414zm2.12-10.607a1 1 0 010 1.414l-.706.707a1 1 0 11-1.414-1.414l.707-.707a1 1 0 011.414 0zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zm-7 4a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1zM5.05 6.464A1 1 0 106.465 5.05l-.708-.707a1 1 0 00-1.414 1.414l.707.707zm1.414 8.486l-.707.707a1 1 0 01-1.414-1.414l.707-.707a1 1 0 011.414 1.414zM4 11a1 1 0 100-2H3a1 1 0 000 2h1z" clip-rule="evenodd"></path></svg></button></header>
     <main>
 
-<container class="flex flex-col flex-grow w-full mx-auto max-w-4xl"><p>There is nothing here.</p><p></p>
- <p>This is a static site.</p><p></p>
- <p>What are you doing here?</p><p></p>
+<container class="flex flex-col flex-grow w-full mx-auto max-w-4xl"><p>There is nothing here.</p>
+  <p></p>
+  <p>This is a static site.</p>
+  <p></p>
+  <p>What are you doing here?</p>
+  <p></p>
 </container>
       <footer class="footer svelte-uoqvvb">© 2023 Rafael Passos
   <small class="line">🚀 Built with SvelteKit</small>
 </footer></main></div></div>
 
 
-		<script type="module" data-sveltekit-hydrate="1okltcc">
-			import { start } from "./_app/immutable/start-aa93bf10.js";
+		<script type="module" data-sveltekit-hydrate="ozzdhi">
+			import { start } from "./_app/immutable/start-67a81025.js";
 
 			start({
 				env: {},
 				paths: {"assets":"","base":""},
-				target: document.querySelector('[data-sveltekit-hydrate="1okltcc"]').parentNode,
-				version: "1674002849555",
+				target: document.querySelector('[data-sveltekit-hydrate="ozzdhi"]').parentNode,
+				version: "1674177965599",
 				hydrate: {
 					node_ids: [0, 5],
 					data: [null,null],
