--- a/admin.php.html
+++ b/admin.php.html
@@ -6,20 +6,20 @@
     <link rel="icon" href="/favicon.svg" />
     <meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout-b19f90b6.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-67a81025.js">
+		<link rel="modulepreload" href="./_app/immutable/start-bb9fee4d.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-998a520c.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-e8597c0a.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper-41c905a7.js">
 		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-a9fb7042.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/_layout.js-9cbb603b.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout-da46b06b.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/admin.php/_page.svelte-6c17be99.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/info-523b83f0.js"><title>Rafael "Auyer" Passos</title><!-- HEAD_svelte-1cbbdsg_START --><meta name="description" content="I'm Rafael, a software engineer based in Brazil. I began my career as a 
+		<link rel="modulepreload" href="./_app/immutable/components/pages/admin.php/_page.svelte-d881f8fa.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/info-523b83f0.js"><title>Admin: Rafael "Auyer" Passos</title><!-- HEAD_svelte-1dek7hj_START --><meta name="description" content="I'm Rafael, a software engineer based in Brazil. I began my career as a 
 researcher, but migrated to the tech industry in 2019.
 I'm a curious individual. 
 I started with (web) software development in Golang. Due to company needs and my interests, I specialized in Data Engineering and even led a squad. 
 Besides all that, I worked with a fair share of Cloud Infrastructure and Kubernetes, developed in Python and Rust, and other things.
-"><!-- HEAD_svelte-1cbbdsg_END -->
+"><!-- HEAD_svelte-1dek7hj_END -->
     <script>
       let darkModeMediaQuery = window.matchMedia('(prefers-color-scheme: dark)')
 
@@ -95,13 +95,13 @@ Besides all that, I worked with a fair share of Cloud Infrastructure and Kuberne
 
 
 		<script type="module" data-sveltekit-hydrate="ozzdhi">
-			import { start } from "./_app/immutable/start-67a81025.js";
+			import { start } from "./_app/immutable/start-bb9fee4d.js";
 
 			start({
 				env: {},
 				paths: {"assets":"","base":""},
 				target: document.querySelector('[data-sveltekit-hydrate="ozzdhi"]').parentNode,
-				version: "1674177965599",
+				version: "1674178455060",
 				hydrate: {
 					node_ids: [0, 5],
 					data: [null,null],
