--- a/index.html
+++ b/index.html
@@ -8,23 +8,23 @@
 		<link href="./_app/immutable/assets/_layout-b19f90b6.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page-800db38c.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/PostsList-988031de.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-67a81025.js">
+		<link rel="modulepreload" href="./_app/immutable/start-bb9fee4d.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-998a520c.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-e8597c0a.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper-41c905a7.js">
 		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-a9fb7042.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/_layout.js-9cbb603b.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout-da46b06b.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-55890d0c.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-2615d398.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/PostsList-c2f76d1b.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/PostDate-2c42476a.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/SocialLinks-565642ce.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/info-523b83f0.js"><title>Rafael "Auyer" Passos</title><!-- HEAD_svelte-1cbbdsg_START --><meta name="description" content="I'm Rafael, a software engineer based in Brazil. I began my career as a 
+		<link rel="modulepreload" href="./_app/immutable/chunks/info-523b83f0.js"><title>Rafael "Auyer" Passos: Home</title><!-- HEAD_svelte-1r3tk8z_START --><meta name="description" content="I'm Rafael, a software engineer based in Brazil. I began my career as a 
 researcher, but migrated to the tech industry in 2019.
 I'm a curious individual. 
 I started with (web) software development in Golang. Due to company needs and my interests, I specialized in Data Engineering and even led a squad. 
 Besides all that, I worked with a fair share of Cloud Infrastructure and Kubernetes, developed in Python and Rust, and other things.
-"><!-- HEAD_svelte-1cbbdsg_END -->
+"><!-- HEAD_svelte-1r3tk8z_END -->
     <script>
       let darkModeMediaQuery = window.matchMedia('(prefers-color-scheme: dark)')
 
@@ -161,13 +161,13 @@ Besides all that, I worked with a fair share of Cloud Infrastructure and Kuberne
 
 
 		<script type="module" data-sveltekit-hydrate="1boewsw">
-			import { start } from "./_app/immutable/start-67a81025.js";
+			import { start } from "./_app/immutable/start-bb9fee4d.js";
 
 			start({
 				env: {},
 				paths: {"assets":"","base":""},
 				target: document.querySelector('[data-sveltekit-hydrate="1boewsw"]').parentNode,
-				version: "1674177965599",
+				version: "1674178455060",
 				hydrate: {
 					node_ids: [0, 2],
 					data: [null,{type:"data",data:(function(a,b,c,d){b.html="\u003Cp\u003EThis is a (small) presentation I gave to my coworkers at CEPESC. At the time, most of the software there was written in Java, and our team (researchers from the Federal University of Brasilia) was developing in Python. I was advocating using Golang in some performance-critical areas of our system.\u003C\u002Fp\u003E";b.text="This is a (small) presentation I gave to my coworkers at CEPESC. At the time, most of the software there was written in Java, and our team (researchers from the Federal University of Brasilia) was developing in Python. I was advocating using Golang in some performance-critical areas of our system.";c[0]={depth:2,value:"Why LaTeX",id:"why-latex"};c[1]={depth:2,value:"Installing tools",id:"installing-tools"};c[2]={depth:2,value:"LaTeX + GIT",id:"latex--git"};c[3]={depth:2,value:"Integrating with Overleaf",id:"integrating-with-overleaf"};c[4]={depth:2,value:"Conclusion",id:"conclusion"};d.html="\u003Cp\u003E\u003Cem\u003EIf you want to write LaTeX on your machine, VS Code is a great option for you! Installing all the necessary packages is a simple process. And with the power of Git, you can sync with web-based editors like Overleaf, and have satisfying versioning and backup.\u003C\u002Fem\u003E\u003C\u002Fp\u003E";d.text="If you want to write LaTeX on your machine, VS Code is a great option for you! Installing all the necessary packages is a simple process. And with the power of Git, you can sync with web-based editors like Overleaf, and have satisfying versioning and backup.";return {posts:[{title:"Going Fast With Go - an introduction to Golang (slides)",date:"2019-08-01",headings:a,slug:"going-fast-with-go",isIndexFile:true,preview:b,readingTime:"1 min read",next:void 0,previous:{title:"Writing LaTeX Documents In Visual Studio Code With LaTeX Workshop",date:"2018-08-31",headings:c,slug:"latex-with-vscode",isIndexFile:true,preview:d,readingTime:"7 min read"}},{title:"Writing LaTeX Documents In Visual Studio Code With LaTeX Workshop",date:"2018-08-31",headings:c,slug:"latex-with-vscode",isIndexFile:true,preview:d,readingTime:"7 min read",next:{title:"Going Fast With Go - an introduction to Golang (slides)",date:"2019-08-01",headings:a,slug:"going-fast-with-go",isIndexFile:true,preview:b,readingTime:"1 min read"},previous:void 0}]}}(Array(0),{},Array(5),{})),uses:{}}],
