--- a/about.html
+++ b/about.html
@@ -4,23 +4,33 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="/favicon.svg" />
-    <meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout-b19f90b6.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/_page-c37f9fac.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-fb19e3ba.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index-998a520c.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-e8597c0a.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper-41c905a7.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-a9fb7042.js">
-		<link rel="modulepreload" href="./_app/immutable/modules/pages/_layout.js-9cbb603b.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/_layout-da46b06b.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/about/_page.svelte-5f9328ca.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/info-523b83f0.js"><title>About: Rafael "Auyer" Passos</title><!-- HEAD_svelte-yxuxyl_START --><meta name="description" content="I'm Rafael, a software engineer based in Brazil. I began my career as a 
+    <meta http-equiv="content-security-policy" content="" />
+    <link href="./_app/immutable/assets/_layout-55b2e92d.css" rel="stylesheet" />
+    <link href="./_app/immutable/assets/_page-c37f9fac.css" rel="stylesheet" />
+    <link rel="modulepreload" href="./_app/immutable/start-84fdaa70.js" />
+    <link rel="modulepreload" href="./_app/immutable/chunks/index-0daa1a08.js" />
+    <link rel="modulepreload" href="./_app/immutable/chunks/singletons-d58f7749.js" />
+    <link rel="modulepreload" href="./_app/immutable/chunks/preload-helper-41c905a7.js" />
+    <link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-68c92546.js" />
+    <link rel="modulepreload" href="./_app/immutable/modules/pages/_layout.js-9cbb603b.js" />
+    <link rel="modulepreload" href="./_app/immutable/chunks/_layout-da46b06b.js" />
+    <link
+      rel="modulepreload"
+      href="./_app/immutable/components/pages/about/_page.svelte-82b6232b.js"
+    />
+    <link rel="modulepreload" href="./_app/immutable/chunks/info-523b83f0.js" />
+    <title>About: Rafael "Auyer" Passos</title>
+    <!-- HEAD_svelte-yxuxyl_START -->
+    <meta
+      name="description"
+      content="I'm Rafael, a software engineer based in Brazil. I began my career as a 
 researcher, but migrated to the tech industry in 2019.
 I'm a curious individual. 
 I started with (web) software development in Golang. Due to company needs and my interests, I specialized in Data Engineering and even led a squad. 
 Besides all that, I worked with a fair share of Cloud Infrastructure and Kubernetes, developed in Python and Rust, and other things.
-"><!-- HEAD_svelte-yxuxyl_END -->
+"
+    />
+    <!-- HEAD_svelte-yxuxyl_END -->
     <script>
       let darkModeMediaQuery = window.matchMedia('(prefers-color-scheme: dark)')
 
@@ -71,89 +81,144 @@ Besides all that, I worked with a fair share of Cloud Infrastructure and Kuberne
 
   <body class="h-full bg-white dark:bg-zinc-900 text-zinc-600 dark:text-zinc-400">
     <div>
+      <div class="flex flex-col min-h-screen">
+        <div class="flex flex-col flex-grow w-full px-4 py-2">
+          <header class="flex items-center justify-between w-full max-w-4xl py-4 mx-auto lg:pb-8">
+            <nav class="nav flex items-center w-full mx-auto svelte-1r9m0vj">
+              <a class="logolink" href="/" active="true"
+                ><img src="/assets/logo.svg" alt="Auyer" width="30px" height="30px"
+              /></a>
+              <a class="link svelte-1r9m0vj" href="/about" active="false">About </a>
+              <a class="link svelte-1r9m0vj" href="/posts" active="false">Posts </a>
+            </nav>
+            <button
+              type="button"
+              role="switch"
+              aria-label="Toggle Dark Mode"
+              aria-checked="true"
+              class="w-5 h-5 sm:h-8 sm:w-8 sm:p-1"
+            >
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 20 20"
+                fill="currentColor"
+                class="hidden text-zinc-500 dark:block"
+              >
+                <path d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"></path>
+              </svg>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 20 20"
+                fill="currentColor"
+                class="block text-zinc-400 dark:hidden"
+              >
+                <path
+                  fill-rule="evenodd"
+                  d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zm-.464 4.95l.707.707a1 1 0 001.414-1.414l-.707-.707a1 1 0 00-1.414 1.414zm2.12-10.607a1 1 0 010 1.414l-.706.707a1 1 0 11-1.414-1.414l.707-.707a1 1 0 011.414 0zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zm-7 4a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1zM5.05 6.464A1 1 0 106.465 5.05l-.708-.707a1 1 0 00-1.414 1.414l.707.707zm1.414 8.486l-.707.707a1 1 0 01-1.414-1.414l.707-.707a1 1 0 011.414 1.414zM4 11a1 1 0 100-2H3a1 1 0 000 2h1z"
+                  clip-rule="evenodd"
+                ></path>
+              </svg>
+            </button>
+          </header>
+          <main>
+            <container class="flex flex-col flex-grow w-full mx-auto max-w-4xl"
+              ><header class="hero svelte-usvegj">
+                <img
+                  alt="Rafael walking a bridge"
+                  width="1600"
+                  height="1230"
+                  src="/assets/hero.webp"
+                  class="svelte-usvegj"
+                />
+                <div class="gradient svelte-usvegj"></div>
+                <div class="overlay svelte-usvegj"></div></header
+            ></container>
+            <br />
+            <container class="flex flex-col flex-grow w-full mx-auto max-w-4xl"
+              ><h1>Rafael, the human being</h1>
+              <p class="svelte-usvegj">
+                I am a curious person and an explorer. Understanding things is one of my biggest
+                motivators. It has to be a superficial understanding in areas out of my scope, but I
+                like to get a fuller picture when I can.
+              </p>
 
+              <p class="svelte-usvegj">
+                When it comes to technology, I am always testing new things, new languages,
+                software, and projects. I do this looking for better solutions to real solutions, or
+                just to get to know new things that could be useful someday.
+              </p>
 
-<div class="flex flex-col min-h-screen "><div class="flex flex-col flex-grow w-full px-4 py-2"><header class="flex items-center justify-between w-full max-w-4xl py-4 mx-auto lg:pb-8"><nav class="nav flex items-center w-full mx-auto svelte-1r9m0vj"><a class="logolink" href="/" active="true"><img src="/assets/logo.svg" alt="Auyer" width="30px" height="30px"></a>
-  <a class="link svelte-1r9m0vj" href="/about" active="false">About
-  </a>
-  <a class="link svelte-1r9m0vj" href="/posts" active="false">Posts
-  </a>
-</nav>
-      <button type="button" role="switch" aria-label="Toggle Dark Mode" aria-checked="true" class="w-5 h-5 sm:h-8 sm:w-8 sm:p-1"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="hidden text-zinc-500 dark:block"><path d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"></path></svg>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="block text-zinc-400 dark:hidden"><path fill-rule="evenodd" d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zm-.464 4.95l.707.707a1 1 0 001.414-1.414l-.707-.707a1 1 0 00-1.414 1.414zm2.12-10.607a1 1 0 010 1.414l-.706.707a1 1 0 11-1.414-1.414l.707-.707a1 1 0 011.414 0zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zm-7 4a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1zM5.05 6.464A1 1 0 106.465 5.05l-.708-.707a1 1 0 00-1.414 1.414l.707.707zm1.414 8.486l-.707.707a1 1 0 01-1.414-1.414l.707-.707a1 1 0 011.414 1.414zM4 11a1 1 0 100-2H3a1 1 0 000 2h1z" clip-rule="evenodd"></path></svg></button></header>
-    <main>
+              <p class="svelte-usvegj">
+                I love to travel (that&#39;s me exploring the world, I guess). I believe seeing
+                different places, cultures and people is very enriching to me as an individual.
+              </p>
 
-<container class="flex flex-col flex-grow w-full mx-auto max-w-4xl"><header class="hero svelte-usvegj"><img alt="Rafael walking a bridge" width="1600" height="1230" src="/assets/hero.webp" class="svelte-usvegj">
-    <div class="gradient svelte-usvegj"></div>
-    <div class="overlay svelte-usvegj"></div></header></container>
-<br>
-<container class="flex flex-col flex-grow w-full mx-auto max-w-4xl"><h1>Rafael, the human being</h1>
-  <p class="svelte-usvegj">I am a curious person and an explorer. Understanding things is one of my biggest motivators. It
-    has to be a superficial understanding in areas out of my scope, but I like to get a fuller
-    picture when I can.
-  </p>
+              <br
+            /></container>
+            <container class="flex flex-col flex-grow w-full mx-auto max-w-4xl"
+              ><h1>Rafael, the professional</h1>
+              <p class="svelte-usvegj">
+                I have a questioning mind guided by reason. I always aim to establish trust in my
+                workspace, so I can propose and discuss changes. I try to improve the quality of the
+                projects I work on, both on a technical (engineering) and a product approach.
+              </p>
 
-  <p class="svelte-usvegj">When it comes to technology, I am always testing new things, new languages, software, and
-    projects. I do this looking for better solutions to real solutions, or just to get to know new
-    things that could be useful someday.
-  </p>
+              <p class="svelte-usvegj">
+                I gravitate toward being in the planning and discovery of products and solutions.
+              </p>
+              <p class="svelte-usvegj">
+                I am a Computer Scientist with a Bachelor’s Degree from IFB -
+                <i>Instituto Federal de Brasília</i> (Federal institute of Brasília).
+              </p>
 
-  <p class="svelte-usvegj">I love to travel (that&#39;s me exploring the world, I guess). I believe seeing different places,
-    cultures and people is very enriching to me as an individual.
-  </p>
+              <p class="svelte-usvegj">
+                I was a Researcher from Dec 2017 to Dec 2019 with the University of Brasília and
+                governmental agencies. I did Micro Service development with Python and GO.
+              </p>
 
-  <br></container>
-<container class="flex flex-col flex-grow w-full mx-auto max-w-4xl"><h1>Rafael, the professional</h1>
-  <p class="svelte-usvegj">I have a questioning mind guided by reason. I always aim to establish trust in my workspace, so
-    I can propose and discuss changes. I try to improve the quality of the projects I work on, both
-    on a technical (engineering) and a product approach.
-  </p>
+              <p class="svelte-usvegj">
+                I started working in the tech industry in Dec 2019. Due to a combination of company
+                needs and personal interests, I specialized in Data Engineering.
+              </p>
 
-  <p class="svelte-usvegj">I gravitate toward being in the planning and discovery of products and solutions.</p>
-  <p class="svelte-usvegj">I am a Computer Scientist with a Bachelor’s Degree from IFB - <i>Instituto Federal de Brasília</i> (Federal institute of Brasília).
-  </p>
+              <p class="svelte-usvegj">
+                I formed and led a six members squad with Data analysts and Data engineers. In this
+                team, I was the technical leader and guided our solutions. With them, I created and
+                evolved what became our current data platform.
+              </p>
 
-  <p class="svelte-usvegj">I was a Researcher from Dec 2017 to Dec 2019 with the University of Brasília and governmental
-    agencies. I did Micro Service development with Python and GO.
-  </p>
+              <p class="svelte-usvegj">
+                Since then, we have gone through a downsizing. I no longer have a team to manage. I
+                am still the maintainer of the platform, but that&#39;s not all I do. I also do
+                software development in Golang and Vue, also Python and Rust when needed.
+              </p>
 
-  <p class="svelte-usvegj">I started working in the tech industry in Dec 2019. Due to a combination of company needs and
-    personal interests, I specialized in Data Engineering.
-  </p>
+              <p class="svelte-usvegj">Want to know more? Contact me. Thanks!</p>
+            </container>
+            <footer class="footer svelte-uoqvvb">
+              © 2023 Rafael Passos
+              <small class="line">🚀 Built with SvelteKit</small>
+            </footer>
+          </main>
+        </div>
+      </div>
 
-  <p class="svelte-usvegj">I formed and led a six members squad with Data analysts and Data engineers. In this team, I was
-    the technical leader and guided our solutions. With them, I created and evolved what became our
-    current data platform.
-  </p>
+      <script type="module" data-sveltekit-hydrate="1g3sm7e">
+        import { start } from './_app/immutable/start-84fdaa70.js'
 
-  <p class="svelte-usvegj">Since then, we have gone through a downsizing. I no longer have a team to manage. I am still the
-    maintainer of the platform, but that&#39;s not all I do. I also do software development in Golang
-    and Vue, also Python and Rust when needed.
-  </p>
-
-  <p class="svelte-usvegj">Want to know more? Contact me. Thanks!</p>
-</container>
-      <footer class="footer svelte-uoqvvb">© 2023 Rafael Passos
-  <small class="line">🚀 Built with SvelteKit</small>
-</footer></main></div></div>
-
-
-		<script type="module" data-sveltekit-hydrate="1g3sm7e">
-			import { start } from "./_app/immutable/start-fb19e3ba.js";
-
-			start({
-				env: {},
-				paths: {"assets":"","base":""},
-				target: document.querySelector('[data-sveltekit-hydrate="1g3sm7e"]').parentNode,
-				version: "1674253165057",
-				hydrate: {
-					node_ids: [0, 3],
-					data: [null,null],
-					form: null,
-					error: null
-				}
-			});
-		</script>
-	</div>
+        start({
+          assets: '',
+          env: {},
+          target: document.querySelector('[data-sveltekit-hydrate="1g3sm7e"]').parentNode,
+          version: '1676424337922',
+          hydrate: {
+            node_ids: [0, 3],
+            data: [null, null],
+            form: null,
+            error: null
+          }
+        })
+      </script>
+    </div>
   </body>
 </html>
