--- a/admin.php.html
+++ b/admin.php.html
@@ -6,19 +6,20 @@
     <link rel="icon" href="/favicon.svg" />
     <meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout-55b2e92d.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-a97a372e.js">
+		<link rel="modulepreload" href="./_app/immutable/start-39353a9e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-0daa1a08.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-d58f7749.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper-41c905a7.js">
 		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-68c92546.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/_layout.js-9cbb603b.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout-da46b06b.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/admin.php/_page.svelte-59743238.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/info-523b83f0.js"><title>Admin: Rafael "Auyer" Passos</title><!-- HEAD_svelte-1dek7hj_START --><meta name="description" content="I'm Rafael, a software engineer based in Brazil. I began my career as a 
-researcher, but migrated to the tech industry in 2019.
+		<link rel="modulepreload" href="./_app/immutable/components/pages/admin.php/_page.svelte-2bb50960.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/info-2aef829f.js"><title>Admin: Rafael "Auyer" Passos</title><!-- HEAD_svelte-1dek7hj_START --><meta name="description" content="I'm Rafael, a Brazilian software engineer. 
+I began my career as a researcher, but migrated to the tech industry in 2019.
 I'm a curious individual. 
-I started with (web) software development in Golang. Due to company needs and my interests, I specialized in Data Engineering and even led a squad. 
-Besides all that, I worked with a fair share of Cloud Infrastructure and Kubernetes, developed in Python and Rust, and other things.
+I started with (web) software development in Golang.
+After thath, I specialized in Data Engineering and created a data focused squad. 
+Besides all that, I worked with a fair share of Cloud Infrastructure and Kubernetes, do development in Golang, Python and Rust.
 "><!-- HEAD_svelte-1dek7hj_END -->
     <script>
       let darkModeMediaQuery = window.matchMedia('(prefers-color-scheme: dark)')
@@ -95,13 +96,13 @@ Besides all that, I worked with a fair share of Cloud Infrastructure and Kuberne
 
 
 		<script type="module" data-sveltekit-hydrate="ozzdhi">
-			import { start } from "./_app/immutable/start-a97a372e.js";
+			import { start } from "./_app/immutable/start-39353a9e.js";
 
 			start({
 				assets: "",
 				env: {},
 				target: document.querySelector('[data-sveltekit-hydrate="ozzdhi"]').parentNode,
-				version: "1676424598088",
+				version: "1676425196480",
 				hydrate: {
 					node_ids: [0, 5],
 					data: [null,null],
