--- a/index.html
+++ b/index.html
@@ -8,22 +8,23 @@
 		<link href="./_app/immutable/assets/_layout-55b2e92d.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page-800db38c.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/PostsList-988031de.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-a97a372e.js">
+		<link rel="modulepreload" href="./_app/immutable/start-39353a9e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-0daa1a08.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-d58f7749.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper-41c905a7.js">
 		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-68c92546.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/_layout.js-9cbb603b.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout-da46b06b.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-9f8468ff.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-49d6d6b4.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/PostsList-6c79e541.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/PostDate-20ade620.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/SocialLinks-1a8fffbb.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/info-523b83f0.js"><title>Rafael "Auyer" Passos: Home</title><!-- HEAD_svelte-1r3tk8z_START --><meta name="description" content="I'm Rafael, a software engineer based in Brazil. I began my career as a 
-researcher, but migrated to the tech industry in 2019.
+		<link rel="modulepreload" href="./_app/immutable/chunks/SocialLinks-18029677.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/info-2aef829f.js"><title>Rafael "Auyer" Passos: Home</title><!-- HEAD_svelte-1r3tk8z_START --><meta name="description" content="I'm Rafael, a Brazilian software engineer. 
+I began my career as a researcher, but migrated to the tech industry in 2019.
 I'm a curious individual. 
-I started with (web) software development in Golang. Due to company needs and my interests, I specialized in Data Engineering and even led a squad. 
-Besides all that, I worked with a fair share of Cloud Infrastructure and Kubernetes, developed in Python and Rust, and other things.
+I started with (web) software development in Golang.
+After thath, I specialized in Data Engineering and created a data focused squad. 
+Besides all that, I worked with a fair share of Cloud Infrastructure and Kubernetes, do development in Golang, Python and Rust.
 "><!-- HEAD_svelte-1r3tk8z_END -->
     <script>
       let darkModeMediaQuery = window.matchMedia('(prefers-color-scheme: dark)')
@@ -104,11 +105,12 @@ Besides all that, I worked with a fair share of Cloud Infrastructure and Kuberne
 
 
 </div>
-      <p class="text-base text-zinc-600 dark:text-zinc-400">I'm Rafael, a software engineer based in Brazil. I began my career as a 
-researcher, but migrated to the tech industry in 2019.
+      <p class="text-base text-zinc-600 dark:text-zinc-400">I'm Rafael, a Brazilian software engineer. 
+I began my career as a researcher, but migrated to the tech industry in 2019.
 I'm a curious individual. 
-I started with (web) software development in Golang. Due to company needs and my interests, I specialized in Data Engineering and even led a squad. 
-Besides all that, I worked with a fair share of Cloud Infrastructure and Kubernetes, developed in Python and Rust, and other things.
+I started with (web) software development in Golang.
+After thath, I specialized in Data Engineering and created a data focused squad. 
+Besides all that, I worked with a fair share of Cloud Infrastructure and Kubernetes, do development in Golang, Python and Rust.
 </p></div></section>
   <section class="w-full"><div class="flex items-center justify-between gap-4 mb-8"><h2 class="text-sm font-medium sm:text-base text-zinc-500 dark:text-zinc-400">Recently Published
       </h2>
@@ -183,14 +185,14 @@ However, in a lot of ways, it can be overkill. And a very expensive one.</p><!--
 </footer></main></div></div>
 
 
-		<script type="module" data-sveltekit-hydrate="1gmd7ow">
-			import { start } from "./_app/immutable/start-a97a372e.js";
+		<script type="module" data-sveltekit-hydrate="12foduw">
+			import { start } from "./_app/immutable/start-39353a9e.js";
 
 			start({
 				assets: "",
 				env: {},
-				target: document.querySelector('[data-sveltekit-hydrate="1gmd7ow"]').parentNode,
-				version: "1676424598088",
+				target: document.querySelector('[data-sveltekit-hydrate="12foduw"]').parentNode,
+				version: "1676425196480",
 				hydrate: {
 					node_ids: [0, 2],
 					data: [null,{type:"data",data:(function(a,b,c,d,e,f,g){a[0]={depth:2,value:"Our data platform journey",id:"our-data-platform-journey"};a[1]={depth:3,value:"Extraction Jobs: what an ETL looks like",id:"extraction-jobs-what-an-etl-looks-like"};a[2]={depth:2,value:"Apache Spark vs Apache Arrow (not equivalent)",id:"apache-spark-vs-apache-arrow-not-equivalent"};a[3]={depth:2,value:"Code Time",id:"code-time"};a[4]={depth:2,value:"Conclusion",id:"conclusion"};b.html="\u003Cp\u003EIn the field of Data Engineering, the Apache Spark framework is one of the most known and powerful ways to extract and process data.\nIt is well-trusted, and it is also very simple to use once you get the infrastructure set up.\nUnderstandably, most engineers will choose it for every task.\nHowever, in a lot of ways, it can be overkill. And a very expensive one.\u003C\u002Fp\u003E";b.text="In the field of Data Engineering, the Apache Spark framework is one of the most known and powerful ways to extract and process data.\nIt is well-trusted, and it is also very simple to use once you get the infrastructure set up.\nUnderstandably, most engineers will choose it for every task.\nHowever, in a lot of ways, it can be overkill. And a very expensive one.";c.title="Going Fast With Go - an introduction to Golang (slides)";c.date="2019-08-01";c.headings=d;c.slug="going-fast-with-go";c.isIndexFile=true;c.preview=e;c.readingTime="1 min read";e.html="\u003Cp\u003EThis is a (small) presentation I gave to my coworkers at CEPESC. At the time, most of the software there was written in Java, and our team (researchers from the Federal University of Brasilia) was developing in Python. I was advocating using Golang in some performance-critical areas of our system.\u003C\u002Fp\u003E";e.text="This is a (small) presentation I gave to my coworkers at CEPESC. At the time, most of the software there was written in Java, and our team (researchers from the Federal University of Brasilia) was developing in Python. I was advocating using Golang in some performance-critical areas of our system.";f[0]={depth:2,value:"Why LaTeX",id:"why-latex"};f[1]={depth:2,value:"Installing tools",id:"installing-tools"};f[2]={depth:2,value:"LaTeX + GIT",id:"latex--git"};f[3]={depth:2,value:"Integrating with Overleaf",id:"integrating-with-overleaf"};f[4]={depth:2,value:"Conclusion",id:"conclusion"};g.html="\u003Cp\u003E\u003Cem\u003EIf you want to write LaTeX on your machine, VS Code is a great option for you! Installing all the necessary packages is a simple process. And with the power of Git, you can sync with web-based editors like Overleaf, and have satisfying versioning and backup.\u003C\u002Fem\u003E\u003C\u002Fp\u003E";g.text="If you want to write LaTeX on your machine, VS Code is a great option for you! Installing all the necessary packages is a simple process. And with the power of Git, you can sync with web-based editors like Overleaf, and have satisfying versioning and backup.";return {posts:[{title:"How I Decreased ETL Cost by Leveraging the Apache Arrow Ecosystem",date:"2023-02-14",headings:a,slug:"apache-arrow-future-of-data-engineering",isIndexFile:true,preview:b,readingTime:"7 min read",next:void 0,previous:c},{title:"Going Fast With Go - an introduction to Golang (slides)",date:"2019-08-01",headings:d,slug:"going-fast-with-go",isIndexFile:true,preview:e,readingTime:"1 min read",next:{title:"How I Decreased ETL Cost by Leveraging the Apache Arrow Ecosystem",date:"2023-02-14",headings:a,slug:"apache-arrow-future-of-data-engineering",isIndexFile:true,preview:b,readingTime:"7 min read"},previous:{title:"Writing LaTeX Documents In Visual Studio Code With LaTeX Workshop",date:"2018-08-31",headings:f,slug:"latex-with-vscode",isIndexFile:true,preview:g,readingTime:"7 min read"}},{title:"Writing LaTeX Documents In Visual Studio Code With LaTeX Workshop",date:"2018-08-31",headings:f,slug:"latex-with-vscode",isIndexFile:true,preview:g,readingTime:"7 min read",next:c,previous:void 0}]}}(Array(5),{},{},Array(0),{},Array(5),{})),uses:{}}],
