--- a/about.html
+++ b/about.html
@@ -5,22 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="/favicon.svg" />
     <meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout-55b2e92d.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/_page-c37f9fac.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-39353a9e.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index-0daa1a08.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-d58f7749.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper-41c905a7.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-68c92546.js">
-		<link rel="modulepreload" href="./_app/immutable/modules/pages/_layout.js-9cbb603b.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/_layout-da46b06b.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/about/_page.svelte-08d68e16.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/info-2aef829f.js"><title>About: Rafael "Auyer" Passos</title><!-- HEAD_svelte-yxuxyl_START --><meta name="description" content="I'm Rafael, a Brazilian software engineer. 
-I began my career as a researcher, but migrated to the tech industry in 2019.
+		<link href="./_app/immutable/assets/_layout.c8810cde.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/_page.c37f9fac.css" rel="stylesheet">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/start.4d5a958b.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/index.292cda7b.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/singletons.db3c7e8d.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/paths.02468444.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/app.5ac9f364.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/preload-helper.41c905a7.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/_layout.svelte.4c274654.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/_layout.js.fb1865a6.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/_layout.da46b06b.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/about-page.svelte.13ed1b38.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/info.52c527e4.mjs"><title>About: Rafael "Auyer" Passos</title><!-- HEAD_svelte-yxuxyl_START --><meta name="description" content="I'm Rafael, a Brazilian software engineer. 
+I began my career as a researcher but migrated to the tech industry in 2019.
 I'm a curious individual. 
 I started with (web) software development in Golang.
-After thath, I specialized in Data Engineering and created a data focused squad. 
-Besides all that, I worked with a fair share of Cloud Infrastructure and Kubernetes, do development in Golang, Python and Rust.
+After that, I specialized in Data Engineering and created a data-focused squad. 
+Besides all this, I worked with a fair share of Cloud Infrastructure and Kubernetes, doing development in Golang, Python, and Rust.
 "><!-- HEAD_svelte-yxuxyl_END -->
     <script>
       let darkModeMediaQuery = window.matchMedia('(prefers-color-scheme: dark)')
@@ -139,22 +141,30 @@ Besides all that, I worked with a fair share of Cloud Infrastructure and Kuberne
 </footer></main></div></div>
 
 
-		<script type="module" data-sveltekit-hydrate="1g3sm7e">
-			import { start } from "./_app/immutable/start-39353a9e.js";
+			
+			<script>
+				{
+					__sveltekit_1blojv4 = {
+						env: {},
+						assets: new URL(".", location.href).pathname.replace(/^\/$/, ''),
+						element: document.currentScript.parentElement
+					};
 
-			start({
-				assets: "",
-				env: {},
-				target: document.querySelector('[data-sveltekit-hydrate="1g3sm7e"]').parentNode,
-				version: "1676425196480",
-				hydrate: {
-					node_ids: [0, 3],
-					data: [null,null],
-					form: null,
-					error: null
+					const data = [null,null];
+
+					Promise.all([
+						import("./_app/immutable/entry/start.4d5a958b.mjs"),
+						import("./_app/immutable/entry/app.5ac9f364.mjs")
+					]).then(([kit, app]) => {
+						kit.start(app, __sveltekit_1blojv4.element, {
+							node_ids: [0, 3],
+							data,
+							form: null,
+							error: null
+						});
+					});
 				}
-			});
-		</script>
-	</div>
+			</script>
+		</div>
   </body>
 </html>
