--- a/posts.html
+++ b/posts.html
@@ -5,21 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="/favicon.svg" />
     <meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout-55b2e92d.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/_page-49288d19.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/PostsList-988031de.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-39353a9e.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index-0daa1a08.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-d58f7749.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper-41c905a7.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-68c92546.js">
-		<link rel="modulepreload" href="./_app/immutable/modules/pages/_layout.js-9cbb603b.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/_layout-da46b06b.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/posts/__page__/_page.svelte-5298cca6.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/info-2aef829f.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/ArrowLeftIcon-0d013bae.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/PostsList-6c79e541.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/PostDate-20ade620.js"><title>Rafael "Auyer" Passos | Posts</title><!-- HEAD_svelte-1j9di4b_START --><!-- HEAD_svelte-1j9di4b_END -->
+		<link href="./_app/immutable/assets/_layout.c8810cde.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/_page.49288d19.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/PostsList.988031de.css" rel="stylesheet">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/start.4d5a958b.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/index.292cda7b.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/singletons.db3c7e8d.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/paths.02468444.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/app.5ac9f364.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/preload-helper.41c905a7.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/_layout.svelte.4c274654.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/_layout.js.fb1865a6.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/_layout.da46b06b.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/posts-__page__-page.svelte.fa3583ed.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/info.52c527e4.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/ArrowLeftIcon.f323cf52.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/PostsList.6dd2730e.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/PostDate.c3b40cf1.mjs"><title>Rafael "Auyer" Passos | Posts</title><!-- HEAD_svelte-1j9di4b_START --><!-- HEAD_svelte-1j9di4b_END -->
     <script>
       let darkModeMediaQuery = window.matchMedia('(prefers-color-scheme: dark)')
 
@@ -160,22 +162,30 @@ However, in a lot of ways, it can be overkill. And a very expensive one.</p><!--
 </footer></main></div></div>
 
 
-		<script type="module" data-sveltekit-hydrate="1f1edea">
-			import { start } from "./_app/immutable/start-39353a9e.js";
+			
+			<script>
+				{
+					__sveltekit_1blojv4 = {
+						env: {},
+						assets: new URL(".", location.href).pathname.replace(/^\/$/, ''),
+						element: document.currentScript.parentElement
+					};
 
-			start({
-				assets: "",
-				env: {},
-				target: document.querySelector('[data-sveltekit-hydrate="1f1edea"]').parentNode,
-				version: "1676425196480",
-				hydrate: {
-					node_ids: [0, 7],
-					data: [null,{type:"data",data:(function(a,b,c,d,e,f,g){a[0]={depth:2,value:"Our data platform journey",id:"our-data-platform-journey"};a[1]={depth:3,value:"Extraction Jobs: what an ETL looks like",id:"extraction-jobs-what-an-etl-looks-like"};a[2]={depth:2,value:"Apache Spark vs Apache Arrow (not equivalent)",id:"apache-spark-vs-apache-arrow-not-equivalent"};a[3]={depth:2,value:"Code Time",id:"code-time"};a[4]={depth:2,value:"Conclusion",id:"conclusion"};b.html="\u003Cp\u003EIn the field of Data Engineering, the Apache Spark framework is one of the most known and powerful ways to extract and process data.\nIt is well-trusted, and it is also very simple to use once you get the infrastructure set up.\nUnderstandably, most engineers will choose it for every task.\nHowever, in a lot of ways, it can be overkill. And a very expensive one.\u003C\u002Fp\u003E";b.text="In the field of Data Engineering, the Apache Spark framework is one of the most known and powerful ways to extract and process data.\nIt is well-trusted, and it is also very simple to use once you get the infrastructure set up.\nUnderstandably, most engineers will choose it for every task.\nHowever, in a lot of ways, it can be overkill. And a very expensive one.";c.title="Going Fast With Go - an introduction to Golang (slides)";c.date="2019-08-01";c.headings=d;c.slug="going-fast-with-go";c.isIndexFile=true;c.preview=e;c.readingTime="1 min read";e.html="\u003Cp\u003EThis is a (small) presentation I gave to my coworkers at CEPESC. At the time, most of the software there was written in Java, and our team (researchers from the Federal University of Brasilia) was developing in Python. I was advocating using Golang in some performance-critical areas of our system.\u003C\u002Fp\u003E";e.text="This is a (small) presentation I gave to my coworkers at CEPESC. At the time, most of the software there was written in Java, and our team (researchers from the Federal University of Brasilia) was developing in Python. I was advocating using Golang in some performance-critical areas of our system.";f[0]={depth:2,value:"Why LaTeX",id:"why-latex"};f[1]={depth:2,value:"Installing tools",id:"installing-tools"};f[2]={depth:2,value:"LaTeX + GIT",id:"latex--git"};f[3]={depth:2,value:"Integrating with Overleaf",id:"integrating-with-overleaf"};f[4]={depth:2,value:"Conclusion",id:"conclusion"};g.html="\u003Cp\u003E\u003Cem\u003EIf you want to write LaTeX on your machine, VS Code is a great option for you! Installing all the necessary packages is a simple process. And with the power of Git, you can sync with web-based editors like Overleaf, and have satisfying versioning and backup.\u003C\u002Fem\u003E\u003C\u002Fp\u003E";g.text="If you want to write LaTeX on your machine, VS Code is a great option for you! Installing all the necessary packages is a simple process. And with the power of Git, you can sync with web-based editors like Overleaf, and have satisfying versioning and backup.";return {posts:[{title:"How I Decreased ETL Cost by Leveraging the Apache Arrow Ecosystem",date:"2023-02-14",headings:a,slug:"apache-arrow-future-of-data-engineering",isIndexFile:true,preview:b,readingTime:"7 min read",next:void 0,previous:c},{title:"Going Fast With Go - an introduction to Golang (slides)",date:"2019-08-01",headings:d,slug:"going-fast-with-go",isIndexFile:true,preview:e,readingTime:"1 min read",next:{title:"How I Decreased ETL Cost by Leveraging the Apache Arrow Ecosystem",date:"2023-02-14",headings:a,slug:"apache-arrow-future-of-data-engineering",isIndexFile:true,preview:b,readingTime:"7 min read"},previous:{title:"Writing LaTeX Documents In Visual Studio Code With LaTeX Workshop",date:"2018-08-31",headings:f,slug:"latex-with-vscode",isIndexFile:true,preview:g,readingTime:"7 min read"}},{title:"Writing LaTeX Documents In Visual Studio Code With LaTeX Workshop",date:"2018-08-31",headings:f,slug:"latex-with-vscode",isIndexFile:true,preview:g,readingTime:"7 min read",next:c,previous:void 0}],page:1,limit:10}}(Array(5),{},{},Array(0),{},Array(5),{})),uses:{params:["page"]}}],
-					form: null,
-					error: null
+					const data = [null,{"type":"data","data":(function(a,b,c,d,e,f,g){a[0]={depth:2,value:"Our data platform journey",id:"our-data-platform-journey"};a[1]={depth:3,value:"Extraction Jobs: what an ETL looks like",id:"extraction-jobs-what-an-etl-looks-like"};a[2]={depth:2,value:"Apache Spark vs Apache Arrow (not equivalent)",id:"apache-spark-vs-apache-arrow-not-equivalent"};a[3]={depth:2,value:"Code Time",id:"code-time"};a[4]={depth:2,value:"Conclusion",id:"conclusion"};b.html="\u003Cp\u003EIn the field of Data Engineering, the Apache Spark framework is one of the most known and powerful ways to extract and process data.\nIt is well-trusted, and it is also very simple to use once you get the infrastructure set up.\nUnderstandably, most engineers will choose it for every task.\nHowever, in a lot of ways, it can be overkill. And a very expensive one.\u003C\u002Fp\u003E";b.text="In the field of Data Engineering, the Apache Spark framework is one of the most known and powerful ways to extract and process data.\nIt is well-trusted, and it is also very simple to use once you get the infrastructure set up.\nUnderstandably, most engineers will choose it for every task.\nHowever, in a lot of ways, it can be overkill. And a very expensive one.";c.title="Going Fast With Go - an introduction to Golang (slides)";c.date="2019-08-01";c.headings=d;c.slug="going-fast-with-go";c.isIndexFile=true;c.preview=e;c.readingTime="1 min read";e.html="\u003Cp\u003EThis is a (small) presentation I gave to my coworkers at CEPESC. At the time, most of the software there was written in Java, and our team (researchers from the Federal University of Brasilia) was developing in Python. I was advocating using Golang in some performance-critical areas of our system.\u003C\u002Fp\u003E";e.text="This is a (small) presentation I gave to my coworkers at CEPESC. At the time, most of the software there was written in Java, and our team (researchers from the Federal University of Brasilia) was developing in Python. I was advocating using Golang in some performance-critical areas of our system.";f[0]={depth:2,value:"Why LaTeX",id:"why-latex"};f[1]={depth:2,value:"Installing tools",id:"installing-tools"};f[2]={depth:2,value:"LaTeX + GIT",id:"latex--git"};f[3]={depth:2,value:"Integrating with Overleaf",id:"integrating-with-overleaf"};f[4]={depth:2,value:"Conclusion",id:"conclusion"};g.html="\u003Cp\u003E\u003Cem\u003EIf you want to write LaTeX on your machine, VS Code is a great option for you! Installing all the necessary packages is a simple process. And with the power of Git, you can sync with web-based editors like Overleaf, and have satisfying versioning and backup.\u003C\u002Fem\u003E\u003C\u002Fp\u003E";g.text="If you want to write LaTeX on your machine, VS Code is a great option for you! Installing all the necessary packages is a simple process. And with the power of Git, you can sync with web-based editors like Overleaf, and have satisfying versioning and backup.";return {posts:[{title:"How I Decreased ETL Cost by Leveraging the Apache Arrow Ecosystem",date:"2023-02-14",headings:a,slug:"apache-arrow-future-of-data-engineering",isIndexFile:true,preview:b,readingTime:"7 min read",next:void 0,previous:c},{title:"Going Fast With Go - an introduction to Golang (slides)",date:"2019-08-01",headings:d,slug:"going-fast-with-go",isIndexFile:true,preview:e,readingTime:"1 min read",next:{title:"How I Decreased ETL Cost by Leveraging the Apache Arrow Ecosystem",date:"2023-02-14",headings:a,slug:"apache-arrow-future-of-data-engineering",isIndexFile:true,preview:b,readingTime:"7 min read"},previous:{title:"Writing LaTeX Documents In Visual Studio Code With LaTeX Workshop",date:"2018-08-31",headings:f,slug:"latex-with-vscode",isIndexFile:true,preview:g,readingTime:"7 min read"}},{title:"Writing LaTeX Documents In Visual Studio Code With LaTeX Workshop",date:"2018-08-31",headings:f,slug:"latex-with-vscode",isIndexFile:true,preview:g,readingTime:"7 min read",next:c,previous:void 0}],page:1,limit:10}}(Array(5),{},{},Array(0),{},Array(5),{})),"uses":{"params":["page"]}}];
+
+					Promise.all([
+						import("./_app/immutable/entry/start.4d5a958b.mjs"),
+						import("./_app/immutable/entry/app.5ac9f364.mjs")
+					]).then(([kit, app]) => {
+						kit.start(app, __sveltekit_1blojv4.element, {
+							node_ids: [0, 7],
+							data,
+							form: null,
+							error: null
+						});
+					});
 				}
-			});
-		</script>
-	</div>
+			</script>
+		</div>
   </body>
 </html>
