--- a/admin.html
+++ b/admin.html
@@ -5,18 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="/favicon.svg" />
     <meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout.c8810cde.css" rel="stylesheet">
-		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/start.4d5a958b.mjs">
-		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/index.292cda7b.mjs">
-		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/singletons.db3c7e8d.mjs">
-		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/paths.02468444.mjs">
-		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/app.5ac9f364.mjs">
-		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/preload-helper.41c905a7.mjs">
-		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/_layout.svelte.4c274654.mjs">
-		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/_layout.js.fb1865a6.mjs">
-		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/_layout.da46b06b.mjs">
-		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/admin-page.svelte.80eb54fe.mjs">
-		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/info.52c527e4.mjs"><title>Admin: Rafael "Auyer" Passos</title><!-- HEAD_svelte-1dek7hj_START --><meta name="description" content="I'm Rafael, a Brazilian software engineer. 
+		<link href="./_app/immutable/assets/_layout.2b126e6a.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.19911453.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.ee6a1281.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.18e96f63.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.76c55c8e.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.06cde65d.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.41c905a7.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.d8df63ad.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_layout.js.984db11e.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/_layout.da46b06b.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/admin-page.svelte.7c291125.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/info.52c527e4.js"><title>Admin: Rafael "Auyer" Passos</title><!-- HEAD_svelte-1dek7hj_START --><meta name="description" content="I'm Rafael, a Brazilian software engineer. 
 I began my career as a researcher but migrated to the tech industry in 2019.
 I'm a curious individual. 
 I started with (web) software development in Golang.
@@ -100,19 +100,19 @@ Besides all this, I worked with a fair share of Cloud Infrastructure and Kuberne
 			
 			<script>
 				{
-					__sveltekit_1blojv4 = {
+					__sveltekit_5anzx8 = {
 						env: {},
-						assets: new URL(".", location.href).pathname.replace(/^\/$/, ''),
+						base: new URL(".", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
 					};
 
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.4d5a958b.mjs"),
-						import("./_app/immutable/entry/app.5ac9f364.mjs")
+						import("./_app/immutable/entry/start.19911453.js"),
+						import("./_app/immutable/entry/app.06cde65d.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_1blojv4.element, {
+						kit.start(app, __sveltekit_5anzx8.element, {
 							node_ids: [0, 4],
 							data,
 							form: null,
