[wip] change theme for Skeletons modern

--- a/src/app.html
+++ b/src/app.html
@@ -53,7 +53,8 @@
 		gtag('config', 'G-4L7GTF77EH');
 	</script>
 
-	<body data-sveltekit-preload-data="hover" data-theme="skeleton">
+	<!-- data-theme="auyer-theme" -->
+	<body data-sveltekit-preload-data="hover" data-theme="modern">
 		<div style="display: contents" class="h-full overflow-hidden">%sveltekit.body%</div>
 	</body>
 </html>
