update personal theme

--- a/src/app.html
+++ b/src/app.html
@@ -53,8 +53,7 @@
 		gtag('config', 'G-4L7GTF77EH');
 	</script>
 
-	<!-- data-theme="auyer-theme" -->
-	<body data-sveltekit-preload-data="hover" data-theme="modern">
+	<body data-sveltekit-preload-data="hover" data-theme="auyer-theme">
 		<div style="display: contents" class="h-full overflow-hidden">%sveltekit.body%</div>
 	</body>
 </html>
